--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -36,3 +36,6 @@ cnInterceptionUrl=/webAPI/downloadTodayInterception
 
 # 误差范围设置
 weightScopeUrl=/webAPI/weightScopeUrl
+
+# 剩余数量
+leftCountUrl=/webAPI/leftCountUrl
